# FamilyTreeAPI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-setup.sh  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/database/: mongo.py
app/features/brak/: model.py  router.py
app/features/tree/: model.py  old_model.py  router.py
app/features/tree/models/: base_model.py  ete3_model.py  graphviz_model.py  treelib_model.py
app/features/user/: model.py  router.py
resources/fonts/: .uuid
resources/fonts/Cantarell/: .uuid
resources/fonts/DroidSans/: .uuid
resources/fonts/FiraSans/: .uuid
resources/fonts/HelveticaNeue/: .uuid
resources/fonts/Oxygen/: .uuid
resources/fonts/Roboto/: .uuid
resources/fonts/Segoe UI/: .uuid
resources/fonts/Ubuntu/: .uuid
resources/fonts/notoemoji/: .uuid
tests/: test_main.http
